--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* home */
 @import url(https://fonts.googleapis.com/css?family=Fredoka+One);
 *{
     margin: 0;
@@ -6,52 +7,59 @@
     
 }
 span{
-    font-size: 45px !important;
+    font-size: 30px !important;
     color: #DD2131;
   background: -webkit-linear-gradient(180deg, #8D288F, #DD2131);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: "Fredoka One";
 }
+/* For desktop */
 nav{
-    background-color: #ee9292;
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 90px;
-    font-family: Arial, sans-serif;
-    position: sticky;
+  background-color: #ee9292;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 90px;
+  font-family: Arial, sans-serif;
+  position: sticky;
 }
 .logo{
-    width: 50%;
-    text-align: left;
+  width: 50%;
+  text-align: left;
 }
 .logo img{
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 }
 .menu{
-    display: flex;
-    justify-content: space-between;
-    width: 45%;
-    text-align: right;
+  display: flex;
+  justify-content: space-between;
+  width: 45%;
+  text-align: right;
 }
 .menu a{
-    transition: all .2s ease-in-out;
-    color: inherit;
-    text-decoration: none;
-    letter-spacing: 2px;
-    font-size: 18px;
-    font-weight: 500;
+  transition: all .2s ease-in-out;
+  color: inherit;
+  text-decoration: none;
+  letter-spacing: 2px;
+  font-size: 18px;
+  font-weight: 500;
 }
 .menu a:hover{
-    transform: scale(1);
-    color:#4c5334;
-    text-shadow: #ee9292;
-    text-decoration: dashed;    
-    text-decoration-color: #28ada6;
+  transform: scale(1);
+  color:#4c5334;
+  text-shadow: #ee9292;
+  text-decoration: dashed;    
+  text-decoration-color: #28ada6;
 }
+.menu-links {
+  display: none;
+  width: 100%;
+  text-align: center;
+}
+
 .sec1{
     background: url(./image/bg.jpg);
     background-position: center;
@@ -378,4 +386,132 @@ footer p{
 align-content: center;
 justify-content: center;
 margin-bottom: 0 !important;
+}
+.menu-links1{
+  display: none;
+}
+
+/* Responsive Design */
+@media only screen and (max-width: 1150px) {
+  .formation div {
+    padding-left: 0px;
+  }
+  nav {
+    flex-direction: column;
+    height: auto;
+  }
+  .container{
+    display: flex;
+    justify-content: center;
+  }
+
+  .logo{
+    width: 100%;
+    text-align: center;
+  }
+  .menu{
+    display: none;
+  }
+  .menu1 a{
+    display: none;
+  }
+
+  .logo img {
+    width: 80px;
+    height: 80px;
+  }
+
+  .menu {
+    margin-top: 10px;
+  }
+.menu1{
+  display: none;
+}
+  .menu-links {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+
+  .menu-links a {
+    display: block;
+    margin-bottom: 10px;
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+  }
+
+  .menu-links a:hover {
+    color: #4c5334;
+  }
+  footer {
+    position: sticky;
+    background-color: #ee9292;
+  }
+  
+  .container img {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .container {
+    display: flex;
+    padding-left: 10px;
+  }
+  
+  .container1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+  }
+  
+  
+  .menu-links1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  
+  .menu-links1 a {
+    transition: all 0.2s ease-in-out;
+    color: white;
+    text-decoration: none;
+    letter-spacing: 1px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  
+  
+  .menu-links1 a:hover {
+    color: #4c5334;
+    text-shadow: 0 0 2px #ee9292;
+    text-decoration: dashed;
+    text-decoration-color: #28ada6;
+  }
+  .foot{
+    justify-content: center;
+  }
+  footer p {
+    margin: 10px 0;
+  }
+  
+}
+@media only screen and (max-width: 740px) {
+  .menu-links1 {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+  .menu-links1 a {
+    display: block;
+    margin-bottom: 10px;
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+  }
 }
