--- a/style.css
+++ b/style.css
@@ -608,7 +608,7 @@ justify-content: center;
   }
   .bounce2 {
     display: flex;
-  width: inherit;
+  width: 100%;
   }
   .formation div p{
     font-size: 25px;
