--- a/style.css
+++ b/style.css
@@ -531,7 +531,7 @@ width: 100%;
   max-width: none;
   flex: none;
   width: 100%;
-	display:block !important;
+	
 }
 .en{
   padding: 0;
@@ -616,7 +616,8 @@ justify-content: center;
   }
   .menu-item{
     max-width: none;
-    display: block !important;
+    width: 100%;
+    flex: none;
   }
 }
 
