--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 *{
     margin: 0;
     padding: 0;
-    
+    outline: 1px solid transparent;
     
 }
 span{
@@ -67,13 +67,14 @@ z-index:100;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: calc(100vh - 90px);    
+    height: 100%;    
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+  position: relative;
 
 }
 .sec1 h1{
@@ -102,6 +103,7 @@ z-index:100;
 .sec2{
     background-color: #4aacff;
     height: 100%;
+    position: relative;
 }
 .image2 img{
     animation: bounce2 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
@@ -146,7 +148,8 @@ z-index:100;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: calc(110vh - 90px);  
+    height: 100%;  
+    position: relative;
 }
 .formation{
     display: grid;
