--- a/type.css
+++ b/type.css
@@ -5,7 +5,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: calc(100vh - 90px);    
+    height: 100%;    
 }
 .headertype h1{
     font-family: 'Fredoka One', cursive;
