--- a/contact.css
+++ b/contact.css
@@ -48,7 +48,7 @@
   
   .rowcon  {
     display: flex;
-    flwx-wrap: wrap;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
   }
