--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     outline: 1px solid transparent;
     
 }
+.card{
+  width: 100% !important;
+}
+.sec1 div{
+  padding-top: 50px;
+}
 span{
     font-size: 30px !important;
     color: #DD2131;
